[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Entities/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/bang.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/shield_deploy.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/hurt.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/Helpers/FlickerLight.gd" type="Script" id=5]
[ext_resource path="res://Models/Hand.tres" type="ArrayMesh" id=6]
[ext_resource path="res://Models/Fire Ball.tres" type="SphereMesh" id=8]

[sub_resource type="CapsuleShape" id=2]
height = 1.9

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.1942 ), 0.0, 0.0, 0, 0, Vector2( 0.138515, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 95, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.579, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -0.487, -0.25, 0, 0.25, 0, -0.509094, -0.25, 0, 0.25, 0, -0.487, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -0.223, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.0292936, -9.28959, 79.1769, -0.0511774, 0.528816, 0.21355, -0.475883, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.0216989, -41.1925, -112.996, -0.0696215, -0.199127, 0.255863, 1.14046, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.0151893, 36.8877, 0.0151893, -36.8877, -113.369, -0.0692518, 3.17598, 0.256948, -0.161896, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.579, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -0.487, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -0.223, -0.0325484, 0.118712, 0.0325484, -0.118712, -0.367919, -0.0377883, -0.00533524, 0.0377883, 0.00533524, -0.223, -0.0513141, 0.000783071, 0.0513141, -0.000783071 ),
"times": PoolRealArray( 0, 0.15, 1 )
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ShieldSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
doppler_tracking = 2
current = true
fov = 75.0
far = 500.0

[node name="Gun" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.579, -0.487, -0.223 )

[node name="OmniLight" type="OmniLight" parent="RotationHelper/Gun"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, -0.115, -0.545, -0.042 )
light_color = Color( 0.937255, 0.760784, 0.337255, 1 )
omni_range = 3.0
omni_attenuation = 2.0
script = ExtResource( 5 )

[node name="Hand" type="MeshInstance" parent="RotationHelper/Gun"]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, -0.072, -0.104, 0.015 )
cast_shadow = 0
mesh = ExtResource( 6 )
material/0 = null

[node name="Particles" type="CPUParticles" parent="RotationHelper/Gun"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.113, -0.5, -0.07 )
cast_shadow = 0
lifetime = 0.5
mesh = ExtResource( 8 )
flag_rotate_y = true
spread = 180.0
gravity = Vector3( 0, 5, 0 )
initial_velocity = 0.5
initial_velocity_random = 1.0
angular_velocity = 25.0
angular_velocity_random = 1.0
damping = 3.0
scale_amount = 0.1
scale_amount_curve = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RotationHelper/Gun"]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/Shoot = SubResource( 4 )
next/Idle = "Idle"
next/Shoot = "Idle"

[node name="ShootPos" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.472288, -0.380763, -0.763008 )

[node name="ShieldPos" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.110886, -2.07186 )
